Replace placeholder image with actual image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Association bénévole d’aide aux devoirs et de tutorat, dédiée aux enfants et adolescents entre 6 et 17 ans des quartiers en difficulté du 15e arrondissement.<br>
                     Gratuit pour les jeunes et engagé pour les bénévoles.
                 </p>
-                <img src="https://via.placeholder.com/400x250?text=Enfants+ensemble" alt="Jeunes heureux" class="hero-img">
+                <img src="image assolila.jpg" alt="Jeunes heureux" class="hero-img">
             </div>
         </section>
 
