Update image alt text in index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="cta-imgs">
                 <!-- Remplace les src par l'URL de tes images (GitHub, Unsplash etc.) -->
                 <img src="https://via.placeholder.com/140x100?text=Tuteur" alt="Photo tuteur" class="cta-img">
-                <img src="https://via.placeholder.com/140x100?text=Sortie" alt="https://www.pourquoidocteur.fr/media/article/COPY_istock-1357352061-1707323934.jpg">
+                <img src="https://via.placeholder.com/140x100?text=Sortie" alt="activité site.jpg">
                 <img src="https://via.placeholder.com/140x100?text=Sourire" alt="Gratuit pour les jeunes" class="cta-img">
             </div>
             <p class="note">Tout est bénévole - aucun frais pour les jeunes ou les bénévoles.</p>
