--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="cta-imgs">
                 <!-- Remplace les src par l'URL de tes images (GitHub, Unsplash etc.) -->
-                <img src="https://via.placeholder.com/140x100?text=Tuteur" alt="Photo tuteur" class="cta-img">
+                <img src="tuteur.jpeg" alt="Photo tuteur" class="cta-img">
                 <img src="activité site.jpg" alt="activité site.jpg">
                 <img src="https://via.placeholder.com/140x100?text=Sourire" alt="Gratuit pour les jeunes" class="cta-img">
             </div>
