--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Association bénévole d’aide aux devoirs et de tutorat, dédiée aux enfants et adolescents entre 6 et 17 ans des quartiers en difficulté du 15e arrondissement.<br>
                     Gratuit pour les jeunes et engagé pour les bénévoles.
                 </p>
-                <img src="image assolila.jpg" alt="Jeunes heureux" class="hero-img">
+                <img src=" alt="Jeunes heureux" class="hero-img">
             </div>
         </section>
 
@@ -43,7 +43,7 @@
             <div class="info-block">
                 <div>
                     <strong>Lieu :</strong> 15e arrondissement, Paris<br>
-                    <strong>Adresse :</strong> <span class="address">[Précisez ici]</span>
+                    <strong>Adresse :</strong> <span class="2 rue du moulin">[2 rue du moulin]</span>
                 </div>
                 <div>
                     <strong>Horaires :</strong><br>
