--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="cta-imgs">
                 <!-- Remplace les src par l'URL de tes images (GitHub, Unsplash etc.) -->
                 <img src="tuteur.jpeg" alt="Photo tuteur" class="cta-img">
-                <img src="activité site.jpg" alt="activité site.jpg">
+                <img src="activité site.jpg" alt="activité site.jpg" class="cta-img">
                 <img src="image jeune.png" alt="Gratuit pour les jeunes" class="cta-img">
             </div>
             <p class="note">Tout est bénévole - aucun frais pour les jeunes ou les bénévoles.</p>
