Fix img tag src attribute in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Association bénévole d’aide aux devoirs et de tutorat, dédiée aux enfants et adolescents entre 6 et 17 ans des quartiers en difficulté du 15e arrondissement.<br>
                     Gratuit pour les jeunes et engagé pour les bénévoles.
                 </p>
-                <img src=" alt="Jeunes heureux" class="hero-img">
+                <img src=" " alt="Jeunes heureux" class="hero-img">
             </div>
         </section>
 
